rework structure of components

--- a/src/components/button-like/button-like.pug
+++ b/src/components/button-like/button-like.pug
@@ -1,2 +1,2 @@
 mixin button-like(number)
-  button.button-like(class=attributes.class)= number
+  button.button-like.js-button-like(class=attributes.class)= number
