--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -108,6 +108,7 @@
 
   &-buttons {
     display: flex;
+    justify-content: space-between;
 
     @media screen and (max-width: $smDesktopWidth) {
       flex-direction: column;
@@ -115,38 +116,13 @@
       margin: 0;
     }
 
-    .header__button:first-child {
+    a:first-child {
       margin-right: 20px;
 
       @media screen and (max-width: $smDesktopWidth) {
         margin-right: 0;
         margin-bottom: 20px;
       }
-    }
-  }
-
-  &__button {
-    padding: 10px 20px;
-    font-weight: 700;
-    font-size: 12px;
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    line-height: 1.2;
-    text-transform: uppercase;
-    border-radius: 22px;
-
-    @media screen and (max-width: $phoneWidth) {
-      font-size: 18px;
-    }
-    &--white {
-      color: $purple-color;
-      background: none;
-      border: 2px solid $purple-color;
-    }
-
-    &--purple {
-      color: #fff;
-      background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
     }
   }
 
@@ -217,7 +193,7 @@
   color: $dark-shade-50;
   font-weight: 400;
   font-size: 14px;
-  font-family: 'Montserrat' sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-style: normal;
   line-height: 17px;
 
