--- a/src/components/reservation-form/reservation-form.pug
+++ b/src/components/reservation-form/reservation-form.pug
@@ -1,7 +1,7 @@
 include /components/date-dropdown/date-dropdown
 include /components/dropdown/dropdown
 mixin reservation-form(luxury)
-  form.reservation-form
+  form.reservation-form.js-reservation-form
     .reservation-form__inner
       .reservation-form__header
         .reservation-form__room-number
