--- a/src/components/search-form/search-form.pug
+++ b/src/components/search-form/search-form.pug
@@ -1,7 +1,7 @@
 include /components/date-dropdown/date-dropdown
 include /components/dropdown/dropdown
 mixin search-form() 
-  form.search-form
+  form.search-form.js-search-form
     .search-form__inner
       h2.search-form__title Найдём номера под ваши пожелания
       .search-form__date-dropdown
