--- a/src/components/about-room/about-room.scss
+++ b/src/components/about-room/about-room.scss
@@ -12,11 +12,9 @@
     grid-row: 1 / 2;
     grid-column: 2 / 3;
     justify-self: start;
+    @extend %item-title;
+    font-size: 0.875rem;
     color: $dark-shade-75;
-    font-weight: 700;
-    font-size: 14px;
-    font-family: $mainFont;
-    line-height: 24px;
   }
 
   &__text {
