--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -1,13 +1,14 @@
 mixin date-dropdown(label1, label2)
   .date-dropdown__wrapper.js-date-dropdown
     .date-dropdown
-      p.dropdown__label= label1
-        .dropdown__header
-          input(class='date-dropdown__input js-date-input' readonly placeholder='ДД.ММ.ГГГГ')
-          button(class="date-dropdown__button js-expand-button" type="button")
-            img(src="/assets/img/dropdown/expand-more.svg", alt="")
-    .date-dropdown
-      p.dropdown__label= label2
+      .dropdown__label= label1
+      .dropdown__header
+        input(class='date-dropdown__input js-date-input' readonly placeholder='ДД.ММ.ГГГГ')
+        button(class="date-dropdown__button js-expand-button" type="button")
+          img(src="/assets/img/dropdown/expand-more.svg", alt="")
+    if label2
+      .date-dropdown
+        .dropdown__label= label2
         .dropdown__header
           input(class='date-dropdown__input js-date-input' readonly placeholder='ДД.ММ.ГГГГ')
           button(class="date-dropdown__button js-expand-button" type="button")
