--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -1,9 +1,11 @@
 .date-dropdown {
-  max-width: 150px;
+  width: 100%;
+  max-width: 100%;
 
   &__wrapper {
     position: relative;
     display: flex;
+    gap: 20px;
     justify-content: space-between;
   }
 
@@ -141,11 +143,11 @@
     cursor: pointer;
 
     &--prev {
-      background: url('/assets/img/date-dropdown/arrow_back.svg') no-repeat center;
+      background: url('./arrow.svg') no-repeat center;
     }
 
     &--next {
-      background: url('/assets/img/date-dropdown/arrow_back.svg') no-repeat center;
+      background: url('./arrow.svg') no-repeat center;
       transform: scale(-1, 1);
     }
   }
