--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -32,7 +32,7 @@
     color: inherit;
     font-weight: inherit;
     font-size: 12px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 1.25;
     text-align: center;
@@ -40,7 +40,7 @@
   }
 
   &__next {
-    background: url("/assets/img/arrow.svg") no-repeat center,
+    background: url('./arrow.svg') no-repeat center,
       linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
   }
 
