--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -12,7 +12,7 @@
     color: $dark-shade-50;
     font-weight: 400;
     font-size: 12px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 15px;
   }
