add css and js file for each page

--- a/src/pug/layouts/uikit.pug
+++ b/src/pug/layouts/uikit.pug
@@ -1,3 +1,4 @@
+include /components/logo/logo
 block variables
 doctype html
 html(lang="en")
@@ -6,6 +7,4 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title= title
   body
-    header.ui-header
-      include /components/ui-logo/logo
     block content
