--- a/src/assets/scss/utils/font-template.scss
+++ b/src/assets/scss/utils/font-template.scss
@@ -1,36 +1,36 @@
 %sub-section-title {
   color: $dark-shade-100;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 1.5rem;
   font-family: $mainFont;
   font-style: normal;
-  line-height: 30px;
+  line-height: 1.2;
 }
 
 %item-title {
   color: $dark-shade-100;
   font-weight: 700;
-  font-size: 19px;
+  font-size: 1.2rem;
   font-family: $mainFont;
   font-style: normal;
-  line-height: 24px;
+  line-height: 1.2;
 }
 
 %label-text {
   color: $dark-shade-100;
   font-weight: 700;
-  font-size: 12px;
+  font-size: 0.75rem;
   font-family: $mainFont;
   font-style: normal;
-  line-height: 15px;
+  line-height: 1.25;
   text-transform: uppercase;
 }
 
 %body-text {
   color: $dark-shade-75;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 0.85rem;
   font-family: $mainFont;
   font-style: normal;
-  line-height: 24px;
+  line-height: 2;
 }
