--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -3,10 +3,10 @@ $mainFont: 'Montserrat', Helvetica, Arial, sans-serif;
 
 // Size
 $mainFontColor: #101010;
-$mainFontSize: 14px;
-$labelFontSize: 12px;
-$titleFontSize: 19px;
-$sub-sectionFontSize: 24px;
+$mainFontSize: 0.875rem; //14px
+$labelFontSize: 0.75rem; //12px
+$titleFontSize: 1.188rem; //19px
+$sub-sectionFontSize: 1.5rem; //24px
 $mainFontWeight: 400;
 $boldFontWeight: 700;
 $mainLineHeight: 1.25;
@@ -24,7 +24,7 @@ $dark-shade-100: #1f2041;
 $dark-shade-75: rgba(31, 32, 65, 0.75);
 $dark-shade-50: rgba(31, 32, 65, 0.50);
 $dark-shade-25: rgba(31, 32, 65, 0.25);
-$dark-shade-5: rgba(31, 32, 65, 0.5);
+$dark-shade-5: rgba(31, 32, 65, 0.05);
 $purple-color: #bc9cff;
 $green-color: #6fcf97;
 $button-gradient: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
