--- a/src/components/expandable-checkbox-list/expandable-checkbox-list.scss
+++ b/src/components/expandable-checkbox-list/expandable-checkbox-list.scss
@@ -34,10 +34,10 @@
 }
 
 .checkbox-button {
-  transition: rotate 0.3s;
+  transition: transform 0.3s;
 
   &--active {
-    rotate: 180deg;
+    transform: rotate(180deg);
   }
 }
 
