--- a/src/components/input-text/input-text.scss
+++ b/src/components/input-text/input-text.scss
@@ -29,7 +29,7 @@
 
   &__state {
     color: $dark-shade-50;
-    font-size: 12px;
+    font-size: 0.75rem;
     font-family: $mainFont;
     text-transform: uppercase;
   }
