--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -2,7 +2,7 @@
   display: block;
   padding-left: 50px;
   color: $dark-shade-50;
-  font-size: 14px;
+  font-size: $mainFontSize;
   font-family: $mainFont;
 
   &__button {
