--- a/src/components/button-like/button-like.scss
+++ b/src/components/button-like/button-like.scss
@@ -3,9 +3,9 @@
   height: 20px;
   padding-left: 19px;
   color: $dark-shade-25;
-  font-size: 10px;
+  font-size: 0.625rem;
   font-family: $mainFont;
-  line-height: 12px;
+  line-height: 1.2;
   background: url('./like.svg') 15% 50% no-repeat;
   border: 1px solid $dark-shade-25;
   border-radius: 10px;
