--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   max-width: 100%;
   padding-left: 30px;
-  line-height: 18px;
+  line-height: 1.2;
   @extend %body-text;
 
   &:not(:last-child) {
@@ -36,18 +36,23 @@
 
   &box__title {
     margin-bottom: 5px;
-    font-weight: 700;
-    font-size: 14px;
+    font-weight: $boldFontWeight;
+    font-size: $mainFontSize;
     font-family: $mainFont;
     font-style: normal;
-    line-height: 18px;
+    line-height: $mainLineHeight;
   }
 
   &box__description {
     font-weight: normal;
-    font-size: 12px;
+    font-size: $labelFontSize;
     font-family: $mainFont;
     font-style: normal;
-    line-height: 14px;
+    line-height: 1.1;
   }
+}
+
+.checkbox__text--rich {
+  display: flex;
+  flex-direction: column;
 }
