--- a/src/components/login-form/login-form.scss
+++ b/src/components/login-form/login-form.scss
@@ -28,11 +28,8 @@
 
   &__text {
     color: #000;
-    font-weight: 400;
-    font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    line-height: 18px;
+    @extend %body-text;
+    line-height: 1.2;
   }
 }
 
