--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -13,11 +13,11 @@
     width: 40px;
     height: 40px;
     color: $dark-shade-50;
-    font-weight: 400;
+    font-weight: $mainFontWeight;
 
     &--active {
       color: #ffffff;
-      font-weight: 700;
+      font-weight: $boldFontWeight;
       background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
       border-radius: 22px;
     }
@@ -31,8 +31,8 @@
     height: 100%;
     color: inherit;
     font-weight: inherit;
-    font-size: 12px;
-    font-family: 'Montserrat', sans-serif;
+    font-size: 0.75rem;
+    font-family: $mainFont;
     font-style: normal;
     line-height: 1.25;
     text-align: center;
