--- a/src/components/reservation-form/reservation-form.scss
+++ b/src/components/reservation-form/reservation-form.scss
@@ -18,39 +18,35 @@
   }
 
   &__room-number-sign {
-    font-weight: 700;
-    font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
+    font-weight: $boldFontWeight;
+    font-size: $mainFontSize;
+    font-family: $mainFont;
     font-style: normal;
-    line-height: 1.2;
+    line-height: $mainLineHeight;
   }
 
   &__luxury-text {
     color: $purple-color;
-    font-weight: 700;
-    font-size: 12px;
+    font-weight: $boldFontWeight;
+    font-size: $labelFontSize;
     font-family: $mainFont;
     font-style: normal;
-    line-height: 15px;
+    line-height: $mainLineHeight;
     text-transform: uppercase;
   }
 
   &__price-per-day-text {
     color: $dark-shade-50;
-    font-weight: 400;
-    font-size: 12px;
-    font-family: 'Montserrat', sans-serif;
+    font-weight: $mainFontWeight;
+    font-size: $labelFontSize;
+    font-family: $mainFont;
     font-style: normal;
     line-height: 1.5;
   }
   &__price-per-day {
     align-self: end;
     color: $dark-shade-50;
-    font-weight: 700;
-    font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    line-height: 1.3;
+    @extend %label-text;
   }
 
   &__prices {
@@ -61,9 +57,9 @@
     display: flex;
     justify-content: space-between;
     color: $dark-shade-50;
-    font-weight: 400;
-    font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
+    font-weight: $mainFontWeight;
+    font-size: $labelFontSize;
+    font-family: $mainFont;
     font-style: normal;
     line-height: 1.2;
   }
