--- a/src/components/review/review.scss
+++ b/src/components/review/review.scss
@@ -21,10 +21,10 @@
     grid-row: 1 / 2;
     grid-column: 2 / 3;
     color: $dark-shade-75;
-    font-weight: 700;
-    font-size: 14px;
+    font-weight: $boldFontWeight;
+    font-size: $mainFontSize;
     font-family: $mainFont;
-    line-height: 24px;
+    line-height: $largeLineHeight;
   }
 
   &__time {
