change image folder

--- a/src/components/about-room/about-room.pug
+++ b/src/components/about-room/about-room.pug
@@ -1,6 +1,6 @@
 mixin about-room(src, title, text)
   .about-room__item
-    img(class="about-room__img" src=src, alt="")
+    img(class="about-room__img" src=src, alt="icon")
     span.about-room__title
       =title
     span.about-room__text
