--- a/src/assets/scss/utils/fonts.scss
+++ b/src/assets/scss/utils/fonts.scss
@@ -6,6 +6,7 @@
     url('../../assets/fonts/montserrat-bold-webfont.woff') format('woff'),
     url('../../assets/fonts/montserrat-bold-webfont.ttf') format('truetype'),
     url('../../assets/fonts/montserrat-bold-webfont.svg#Montserrat') format('svg');
+  font-display: swap;
 }
 
 @font-face {
@@ -16,4 +17,5 @@
     url('../../assets/fonts/montserrat-regular-webfont.woff') format('woff'),
     url('../../assets/fonts/montserrat-regular-webfont.ttf') format('truetype'),
     url('../../assets/fonts/montserrat-regular-webfont.svg#Montserrat') format('svg');
+  font-display: swap;
 }
