--- a/src/components/expandable-checkbox-list/expandable-checkbox-list.pug
+++ b/src/components/expandable-checkbox-list/expandable-checkbox-list.pug
@@ -1,9 +1,9 @@
 mixin expandable-checkbox-list(label)
-  .expandable-checkbox-list
+  .expandable-checkbox-list.js-expandable-checkbox-list
     .checkbox__wrapper
       span.checkbox-label= label
       button.checkbox-button__expand
-        img(class="checkbox-button" src="/assets/img/expandable-checkbox-list/expand-more.svg", alt="")
+        img(class="checkbox-button" src=require("/src/assets/img/icons/expand-more.svg"), alt="expand")
     ul.checkbox-list
       li.checkbox-item
         +checkbox('Завтрак')
