--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -53,8 +53,8 @@ mixin footer()
             |Copyright © 2018 Toxin отель. Все права зачищены.
           .social
             a( class="social__link" href="https://twitter.com/toxin")
-              img(class="social__icon" src="/assets/img/footer/twitter.png", alt="twitter")
+              img(class="social__icon" src=require("/src/assets/img/icons/twitter.svg"), alt="twitter")
             a( class="social__link" href="https://facebook.com/toxin")
-              img(class="social__icon" src="/assets/img/footer/facebook.png", alt="facebook")
+              img(class="social__icon" src=require("/src/assets/img/icons/facebook.svg"), alt="facebook")
             a( class="social__link" href="https://instagram.com/toxin")  
-              img(class="social__icon" src="/assets/img/footer/instagram.png", alt="instagram")
+              img(class="social__icon" src=require("/src/assets/img/icons/instagram.svg"), alt="instagram")
