--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -16,7 +16,7 @@
     clip: rect(0 0 0 0);
 
     &:checked + .check__box {
-      background: url('./check.svg') 50% 50% no-repeat;
+      background: url('/src/assets/img/icons/check.svg') 50% 50% no-repeat;
       box-shadow: 0 0 0 1px $purple-color;
     }
     &:focus + .check__box {
