--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -40,7 +40,7 @@
   }
 
   &__next {
-    background: url('./arrow.svg') no-repeat center,
+    background: url('/src/assets/img/icons/arrow-white.svg') no-repeat center,
       linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
   }
 
