--- a/src/components/reservation-form/reservation-form.pug
+++ b/src/components/reservation-form/reservation-form.pug
@@ -1,5 +1,6 @@
 include /components/date-dropdown/date-dropdown
 include /components/dropdown/dropdown
+include /components/button/button
 mixin reservation-form(luxury)
   form.reservation-form.js-reservation-form
     .reservation-form__inner
@@ -24,18 +25,18 @@ mixin reservation-form(luxury)
           .reservation-form__prices-item-text
             p Сбор за услуги: скидка 2 179₽
             .reservation-form__prices-item-info
-              img(class="reservation-form__info-icon" src="/assets/img/reservation-form/info.svg", alt="icon")
+              img(class="reservation-form__info-icon" src=require("/src/assets/img/icons/info.svg"), alt="icon")
               span.reservation-form__tooltip подсказка
           span.reservation-form__prices-item-price 0₽
         .reservation-form__prices-item
           .reservation-form__prices-item-text
             p Сбор за дополнительные услуги
             .reservation-form__prices-item-info
-              img(class="reservation-form__info-icon" src="/assets/img/reservation-form/info.svg", alt="icon")
+              img(class="reservation-form__info-icon" src=require("/src/assets/img/icons/info.svg"), alt="icon")
               span.reservation-form__tooltip подсказка
           span.reservation-form__prices-item-price 300₽
       .reservation-form__total-price
         span Итого
         .reservation-form__total-price-dashed
         span 38 081₽
-      button.button.button--arrow забронировать
+      +button({"color": "arrow", "tag": "a", "href": "/search-room.html", "text": "забронировать", 'size': 'm'})
