--- a/src/pug/pages/form-elements/form-elements.pug
+++ b/src/pug/pages/form-elements/form-elements.pug
@@ -18,7 +18,7 @@ include /components/button/button
   include /components/logo/logo
 block variables
   -var title= "Form Flements"
-  -var review = {name: 'Рулон Обоев', src: '/assets/img/review/4el.jpg', time: '5 дней назад', likes: '12', liked: true, comment: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'}
+  -var review = {name: 'Рулон Обоев', src: require('/src/assets/img/review/4el.jpg'), time: '5 дней назад', likes: '12', liked: true, comment: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'}
 block content
   .content--form-elements
     header.ui-header
@@ -99,7 +99,7 @@ block content
           +bullet-list(["Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00, а выезд до 12:00"])
       .form-elements__wrapper
         .form-elements__about-room
-          +about-room('/assets/img/about-room/insert_emoticon.png', 'Комфорт', 'Шумопоглощающие стены')
-          +about-room('/assets/img/about-room/location_city.png', 'Удобство', 'Окно в каждой из спален')
+          +about-room(require('/src/assets/img/icons/insert_emoticon.svg'), 'Комфорт', 'Шумопоглощающие стены')
+          +about-room(require('/src/assets/img/icons/location_city.svg'), 'Удобство', 'Окно в каждой из спален')
         .form-elements__review
           +review(review)
