--- a/src/pug/pages/landing-page/landing-page.scss
+++ b/src/pug/pages/landing-page/landing-page.scss
@@ -1,5 +1,5 @@
 .landing-page {
-  background: center / cover no-repeat url('../../../assets/img/backgrounds/landing-page-bg.jpg');
+  background: center / cover no-repeat url('/src/assets/img/backgrounds/landing-page-bg.jpg');
 
   &__wrapper {
     display: grid;
